--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link href="/https:/fonts.googleapis.com/css?family=Inter:400,600,700&display=swap" rel="stylesheet">
     <style>
         body {
+            <span class="logo">PapiloTrade <span class="trusted-badge">Trusted & Secure</span></span>
+    <nav>
+        <button onclick="showSection('home')">Home</button>
+        <button onclick="showSection('about')">About</button>
+        <button onclick="showSection('contact')">Contact Us</button>
+        <button onclick="showSection('signup')">Sign Up</button>
+        <button onclick="showSection('login')">Login</button>
+        <button id="logoutBtn" onclick="logout()" style="display:none;">Logout</button>
+    </nav>
+</header></header>
             font-family: 'Inter', Arial, sans-serif;
             background: linear-gradient(135deg, #fff 0%, #f5e9da 40%, #e3f2fd 100%);
             margin: 0;
