--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <button onclick="showSection('about')">About</button>
             <button onclick="showSection('contact')">Contact Us</button>
             <button onclick="showSection('referral')">Referral</button>
-            <button onclick="showSection('signup')">
+            <button onclick="showSection('signup')">sign up</button>
 <form id="signupForm" onsubmit="return verifyOtp()">
   <input type="text" id="phoneNumber" placeholder="Enter phone/email" required><br>
   <button type="button" onclick="sendOtp()">Get OTP</button><br><br>
@@ -146,7 +146,7 @@
   <input type="text" id="otpInput" placeholder="Enter OTP" required><br>
   <button type="submit">Verify & Login</button>
 </form></button>
-            <button onclick="showSection('login')">
+            <button onclick="showSection('login')">login</button>
 <form id="loginForm" onsubmit="return verifyOtp()">
   <input type="text" id="phoneNumber" placeholder="Enter phone/email" required><br>
   <button type="button" onclick="sendOtp()">Get OTP</button><br><br>
